--- a/Detect_Irregular_Heartbeat.ipynb
+++ b/Detect_Irregular_Heartbeat.ipynb
@@ -56,8 +56,7 @@
           "height": 910
         },
         "id": "XcMjBqC1N2Hj",
-        "outputId": "6b815706-82d1-45af-a6af-dd189dcbff98",
-        "collapsed": true
+        "outputId": "6b815706-82d1-45af-a6af-dd189dcbff98"
       },
       "source": [
         "import pandas as pd\n",
@@ -68,7 +67,7 @@
         "print(\"\\n\\n--- Thông tin tổng quan về DataFrame ---\\n\")\n",
         "df.info()"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,11 +558,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "Lj0EwskD5SdB",
         "outputId": "16e54eaa-b7a8-4ae0-ff5a-6577b4333af8"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -594,7 +592,7 @@
       "metadata": {
         "id": "3LAvNw7-6YO0"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -643,7 +641,7 @@
       "metadata": {
         "id": "slAAROjp6yCM"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -679,11 +677,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "collapsed": true,
         "id": "fIieXGes8sIL",
         "outputId": "c820d3f2-8fdb-4ee3-a0e8-59affbbe8fb1"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,7 +750,7 @@
         "id": "ID6ITnKS9B4B",
         "outputId": "98c9958b-d154-49af-8de6-0d9d6658db44"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -828,11 +825,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 892
         },
-        "collapsed": true,
         "id": "FrlO86lk_uqq",
         "outputId": "24001d00-c934-4050-f64b-84b15b67b1bc"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -888,7 +884,7 @@
         "---\n",
         "## **Tiền xử lý dữ liệu**\n",
         "\n",
-        "Chọn các cột features *Heart Rate*, *Oxygen Saturation*, *Body Temperature*, *Systolic Blood Pressure*, *Diastolic Blood Pressure*, *Derived_BMI* và cột label *Risk Category*. Chuyển đổi cột 'Risk Category' từ dạng chữ ('Low Risk', 'High Risk') sang dạng số (0, 1). Xử lý các cột Categorical (Gender) bằng One-Hot Encoding. Chuẩn hóa dữ liệu số bằng `StandardScaler`.\n"
+        "Chọn các cột features *Heart Rate*, *Oxygen Saturation*, *Body Temperature*, *Systolic Blood Pressure*, *Diastolic Blood Pressure*, *Derived_BMI* và cột label *Risk Category*. Chuyển đổi cột 'Risk Category' từ dạng chữ ('Low Risk', 'High Risk') sang dạng số (0, 1). Chuẩn hóa dữ liệu số bằng `StandardScaler`.\n"
       ]
     },
     {
@@ -899,13 +895,12 @@
           "height": 439
         },
         "id": "gFpo0GZNOC5E",
-        "outputId": "b55eb9a4-7e51-4ab6-d5d8-d5ffe2cea8c6",
-        "collapsed": true
+        "outputId": "b55eb9a4-7e51-4ab6-d5d8-d5ffe2cea8c6"
       },
       "source": [
         "from sklearn.preprocessing import StandardScaler\n",
         "\n",
-        "# Danh sách các tính năng đã chỉnh sửa - chỉ Nhịp tim, Độ bão hòa oxy và BMI phái sinh\n",
+        "# Danh sách các feature\n",
         "features = ['Heart Rate', 'Oxygen Saturation', 'Body Temperature', 'Systolic Blood Pressure', 'Diastolic Blood Pressure', 'Derived_BMI']\n",
         "target = 'Risk Category'\n",
         "\n",
@@ -914,8 +909,6 @@
         "\n",
         "# Chuyển đổi 'Risk Category' sang dạng số\n",
         "y = y.map({'Low Risk': 0, 'High Risk': 1})\n",
-        "\n",
-        "# Không cần One-Hot Encoding vì cột Gender đã bị loại bỏ\n",
         "\n",
         "# Xác định các cột số (tất cả các tính năng hiện đều là số)\n",
         "numerical_features = features\n",
@@ -933,7 +926,7 @@
         "print(\"\\n--- Phân bố dữ liệu (Label) sau chuyển đổi ---\")\n",
         "display(y.value_counts())"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1324,8 +1317,7 @@
           "height": 203
         },
         "id": "aeb118b3",
-        "outputId": "ea695cc9-a256-45c4-83f6-b421e3bb7b61",
-        "collapsed": true
+        "outputId": "ea695cc9-a256-45c4-83f6-b421e3bb7b61"
       },
       "source": [
         "print(\"\\n--- Thống kê mô tả các cột dữ liệu số ---\")\n",
@@ -1333,7 +1325,7 @@
         "numerical_cols = df.select_dtypes(include=['int64', 'float64']).columns\n",
         "display(df[numerical_cols].describe().loc[['mean', 'std']])"
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1709,7 +1701,7 @@
         "print(f\"Validation set: {X_val.shape[0]} mẫu\")\n",
         "print(f\"Test set:       {X_test.shape[0]} mẫu\")"
       ],
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1780,7 +1772,7 @@
         "print(\"\\n--- Cấu trúc Model (Updated) ---\")\n",
         "model.summary()"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1916,7 +1908,7 @@
         "\n",
         "print(\"--- TRAINING KẾT THÚC (Updated) ---\")"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2059,8 +2051,7 @@
           "height": 1000
         },
         "id": "1eed83d8",
-        "outputId": "d6630c8f-8be3-482e-82f9-328813b84446",
-        "collapsed": true
+        "outputId": "d6630c8f-8be3-482e-82f9-328813b84446"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -2120,7 +2111,7 @@
         "plt.grid(True)\n",
         "plt.show()"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2193,8 +2184,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "c96a0ab1",
-        "outputId": "7a2d60ef-b32d-4604-a318-f2f060e275e1",
-        "collapsed": true
+        "outputId": "7a2d60ef-b32d-4604-a318-f2f060e275e1"
       },
       "source": [
         "import tensorflow as tf\n",
@@ -2233,7 +2223,7 @@
         "print(\"\\n--- MODEL ĐÃ LƯU DƯỚM DẠNG TFLITE LƯỢNG TỬ HÓA ---\\n\")\n",
         "print(f\"Đường dẫn: {quantized_tflite_model_path}\")"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2296,8 +2286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "82759667",
-        "outputId": "f2e721f6-b606-443c-e019-17aeab680be5",
-        "collapsed": true
+        "outputId": "f2e721f6-b606-443c-e019-17aeab680be5"
       },
       "source": [
         "# Kiểm tra kích thước file model TFLite đã lượng tử hóa\n",
@@ -2308,7 +2297,7 @@
         "print(f\"Kích thước file TFLite gốc: {tflite_model_size} bytes\")\n",
         "print(f\"Tỷ lệ giảm kích thước: {((tflite_model_size - quantized_tflite_model_size) / tflite_model_size) * 100:.2f}%\")"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2340,8 +2329,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4054ddf9",
-        "outputId": "ac04ddee-33af-408d-e2d0-396b5aaed679",
-        "collapsed": true
+        "outputId": "ac04ddee-33af-408d-e2d0-396b5aaed679"
       },
       "source": [
         "# Định nghĩa đường dẫn file header đầu ra\n",
@@ -2357,7 +2345,7 @@
         "with open(cpp_header_path, 'r') as f:\n",
         "    print(f.read())"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2657,7 +2645,7 @@
         "print(f\"4. Tỷ lệ giảm kích thước sau lượng tử hóa: {((tflite_model_size - quantized_tflite_model_size) / tflite_model_size) * 100:.2f}%\")\n",
         "print(\"\\nBạn đã có các file `vital_signs_model_quantized.tflite` và `vital_signs_model.h` sẵn sàng để tích hợp vào dự án ESP32 sử dụng TensorFlow Lite for Microcontrollers.\")"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
